--- a/pics/templates/all-pics/base.html
+++ b/pics/templates/all-pics/base.html
@@ -9,8 +9,17 @@
     <title> Obindi's Gallery </title>
   {% endif %}
 
+  {% block styles %}
+  {% bootstrap_css %}
+{% endblock %}
+
 </head>
 <body>
-    {% block content %} <h1>Image posted {{date|date:"l d-F Y"}}</h1> {%endblock%}
+  {% block content %} <h1 class='text-center'>Image Posted {{date|date:"l d-F Y"}}</h1> {%endblock%}
+
+  {% block scripts %}
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   {% bootstrap_javascript %}
+  {% endblock %}
 </body>
 </html>
