--- a/pics/templates/all-pics/base.html
+++ b/pics/templates/all-pics/base.html
@@ -1,25 +1,33 @@
+{% load bootstrap3 %}
+{% load static%}
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  {% if title %}
-  <title>Obindi's Gallery - {{title}}</title>
-  {% else %}
+    {% if title %}
+    <title>Obindi's Gallery - {{title}}</title>
+    {% else %}
     <title> Obindi's Gallery </title>
-  {% endif %}
+    {% endif %}
 
-  {% block styles %}
-  {% bootstrap_css %}
-{% endblock %}
+    {% block styles %}
+    {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    {% endblock %}
 
 </head>
-<body>
-  {% block content %} <h1 class='text-center'>Image Posted {{date|date:"l d-F Y"}}</h1> {%endblock%}
 
-  {% block scripts %}
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   {% bootstrap_javascript %}
-  {% endblock %}
+<body>
+    {% include "navbar.html" %}
+
+    {% block content %} <h1 class='text-center'>Image Posted {{date|date:"l d-F Y"}}</h1> {%endblock%}
+
+    {% block scripts %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {% bootstrap_javascript %}
+    {% endblock %}
 </body>
+
 </html>
