--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'picsGallery' %}">Obindi's gallery</a>
-    </div>
-  </div>
-</nav>
-</body>
-</html>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navMain">
+        <div class="container">
+            <a class="smooth-scroll" href="/welcome">Obindi's Gallery</a>
+            </div>
+      
+    </nav>
