add bootsrap to templates

--- a/pics/templates/all-pictures/search.html
+++ b/pics/templates/all-pictures/search.html
@@ -7,20 +7,20 @@
       
         {% for picture in pictures %}
             <p id="img-copy"></p>
-            <div class="col-md-4 img-holder">
+            <div class="col-md-4 img-holder thumbnail">
                 <div class="image-details">
-                    <p class="text-center"><a data-toggle="modal" data-target="#/pictures/{{picture.id}}">{{img.name}}</a></p>
+                    <p class="text-center"><a data-toggle="modal" data-target="#/pictures/{{picture.id}}">{{picture.name}}</a></p>
                 </div>
-                <img src="{{picture.picture.url}}" alt="pictures">
+                <img src="{{picture.picture.url}}" alt="pictures" style="height: 300px;">
             </div>
         {% empty %}
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="/static/image/404.png" alt="Loading Image">
+                    <img src="https://st3.depositphotos.com/3858415/15199/v/1600/depositphotos_151994870-stock-illustration-vector-template-404-error-page.jpg" alt="Loading Image" height="70%" width="100%" style="margin-left: 47%;">
+                    <p>Return to Obindi's Gallery</p> 
                 </div>
                 <div class="col-md-6">
-                    <h4>Sorry No Searched Images.</h4>
                    
                 </div>
             </div>
