--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navMain">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navMain" style="background-color: white;">
         <div class="container">
-            <a class="smooth-scroll" href="/welcome">Obindi's Gallery</a>
+            <a class="smooth-scroll" href="{% url 'welcome' %}">Obindi's Gallery</a>
             </div>
       
     </nav>
