--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,338 @@
-h1{
-    color: blue;
+body{
+    background-image: url('https://images.unsplash.com/photo-1474112704314-8162b7749a90?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60');
+    background-repeat:no-repeat;
+    background-size: cover;
 }
+
+h1,h2,h3{
+    text-align: center;
+    color:aqua;
+}
+
+}
+.search-section {
+    padding-top: 6rem;
+    background-color: #F9F1E9;
+}
+
+.search-form form {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.search-input {
+    width: 15rem;
+    border: 0;
+    border-radius: 0;
+    
+    color: white;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.search-input:hover {
+    border-bottom: 1px solid black;
+}
+
+.search-input:focus {
+    transform: scaleX(1.1);
+    border: 0 transparent;
+    border-bottom: 1px black;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.large-header {
+   position: relative;
+   width: 100%;
+   background: #111;
+   overflow: hidden;
+   background-size: cover;
+   background-position: center center;
+   z-index: 1;
+}
+span{
+    color: white;
+    text-align: center;
+}
+
+.main-title {
+   position: absolute;
+   margin: 0;
+   padding: 0;
+   color: #F9F1E9;
+   text-align: center;
+   top: 50%;
+   left: 50%;
+   -webkit-transform: translate3d(-50%, -50%, 0);
+   transform: translate3d(-50%, -50%, 0);
+}
+
+.demo .main-title {
+   text-transform: uppercase;
+   font-size: 4.2em;
+   letter-spacing: 0.1em;
+}
+
+.main-title .thin {
+   font-weight: 200;
+}
+
+@media only screen and (max-width: 500px) {
+   .demo .main-title {
+      font-size: 3em;
+   }
+}
+
+
+
+
+.nav-side a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    font-family: 'Questrial';
+}
+
+.nav-side h4 {
+    color: rgb(7, 209, 158);
+    padding: 0px 0px 0px 20px;
+}
+
+.nav-side a:hover {
+    color: rgb(7, 209, 158);
+}
+
+.nav-side .close-nav {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer a {
+    padding: 1px;
+}
+
+.footer p {
+    color: #818181;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+}
+
+.social-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.social-buttons a:hover {
+    color: rgb(7, 209, 158);
+}
+
+@media screen and (max-height: 450px) {
+    .nav-side {
+        padding-top: 15px;
+    }
+    .nav-side a {
+        font-size: 18px;
+    }
+}
+
+#navMain {
+    font-family: 'Questrial';
+    font-size: 20px;
+    text-transform: uppercase;
+    background: #222;
+}
+
+#navMain .navbar-toggler {
+    font-size: 16px;
+    padding: 11px;
+    color: rgba(16, 230, 184, 0.973);
+}
+
+#navMain a {
+    color: rgba(16, 230, 184, 0.973);
+    text-decoration: none;
+}
+
+#navMain .navbar-nav .nav-item:active,
+#navMain .navbar-nav .nav-item:focus {
+    outline: none;
+    background-color: rgb(240, 120, 120);
+}
+
+@media (min-width: 992px) {
+    #navMain {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        -webkit-transition: padding-top 0.5s ease-in-out, padding-bottom 0.5s;
+        -moz-transition: padding-top 0.5s ease-in-out, padding-bottom 0.5s;
+        transition: padding-top 0.5s ease-in-out, padding-bottom 0.5s;
+        letter-spacing: 1px;
+        background: #222;
+    }
+    #navMain .nav-link.active {
+        outline: none;
+        background-color: rgba(26, 25, 24, 0.699);
+    }
+    #navMain .nav-link.active:hover {
+        color: white;
+        background-color: rgba(230, 210, 97, 0.637)
+    }
+    #navMain.navbar-shrink {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background: #222;
+        border-bottom: 1px solid red;
+    }
+    #navMain.navbar-shrink a {
+        color: rgba(16, 230, 184, 0.973);
+    }
+}
+
+
+
+.search-section {
+    padding-top: 6rem;
+}
+
+.search-form form {
+    display: flex;
+    justify-content: center;
+}
+
+.search-input {
+    width: 15rem;
+    border: 0;
+    border-radius: 0;
+    
+    color: white;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.search-input:hover {
+    border-bottom: 1px solid black;
+}
+
+.search-input:focus {
+    transform: scaleX(1.1);
+    border: 0 transparent;
+    border-bottom: 1px black;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+
+
+.img-holder img {
+   
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
+
+.img-holder {
+    padding:10px;
+    overflow: hidden;
+    box-shadow: 2px 4px 12px 2px #dcdcdc;
+}
+
+.img-holder:hover img {
+    
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    z-index: 1;
+}
+
+.image-details {
+    position: absolute;
+    height: inherit;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    padding-top: 18%;
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.image-details,
+.image-details a {
+    color: transparent;
+    border: rgba(0, 0, 0, 0);
+}
+
+.image-details .btn-outline-danger:hover {
+    background: white;
+}
+
+.image-details:hover {
+   
+    color: white;
+    background-color: rgba(0, 0, 0, 0.507);
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.image-details:hover a {
+    color: white;
+}
+
+.image-details a:hover {
+    cursor: pointer;
+}
+
+.image-details a{
+    font-size: 20px;
+}
+
+
+
+.btn-outline-danger:hover i {
+    color: rgb(141, 11, 11);
+}
+
+
+
+.modal img {
+    width:auto;
+    max-width: 80%;
+    max-height: 70vh;
+    width: auto\9; 
+  }
+
+.modal-body{
+    text-align: center;
+    height: auto;
+  }
+
+  @media (min-width: 768px){
+  .modal-dialog {
+    width: auto;
+    max-width: 80%;}
+  }
+
+  
